--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/PreviewerControls/ModelPreviewerControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/PreviewerControls/ModelPreviewerControl.xaml
@@ -5,32 +5,32 @@
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
-	<Grid Grid.Row="0" HorizontalAlignment="Stretch">
+	<Grid HorizontalAlignment="Stretch">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="256" />
 			<ColumnDefinition Width="320" />
 			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
-		<StackPanel Grid.Column="0">
+		<StackPanel>
 			<Label Style="{StaticResource PreviewTitleLabel}">Asset properties</Label>
 			<Grid>
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition />
 					<ColumnDefinition />
 				</Grid.ColumnDefinitions>
-				<StackPanel Grid.Column="0">
-					<Label FontWeight="Bold">Model name</Label>
-					<Label FontWeight="Bold">Default vertex count</Label>
-					<Label FontWeight="Bold">Default index count</Label>
-				</StackPanel>
-				<StackPanel Grid.Column="1">
-					<Label Name="TextureName">N/A</Label>
-					<Label Name="DefaultVertexCount">N/A</Label>
-					<Label Name="DefaultIndexCount">N/A</Label>
-				</StackPanel>
+				<Grid.RowDefinitions>
+					<RowDefinition Style="{StaticResource PreviewerRow}" />
+					<RowDefinition Style="{StaticResource PreviewerRow}" />
+					<RowDefinition Style="{StaticResource PreviewerRow}" />
+				</Grid.RowDefinitions>
+				<Label FontWeight="Bold">Model name</Label>
+				<Label Grid.Row="1" FontWeight="Bold">Default vertex count</Label>
+				<Label Grid.Row="2" FontWeight="Bold">Default index count</Label>
+				<Label Grid.Column="1" Name="TextureName">N/A</Label>
+				<Label Grid.Column="1" Grid.Row="1" Name="DefaultVertexCount">N/A</Label>
+				<Label Grid.Column="1" Grid.Row="2" Name="DefaultIndexCount">N/A</Label>
 			</Grid>
 		</StackPanel>
-
 		<StackPanel Grid.Column="1">
 			<Label Style="{StaticResource PreviewTitleLabel}">File properties</Label>
 			<Grid>
@@ -38,19 +38,19 @@
 					<ColumnDefinition />
 					<ColumnDefinition />
 				</Grid.ColumnDefinitions>
-				<StackPanel Grid.Column="0">
-					<Label FontWeight="Bold">File name</Label>
-					<Label FontWeight="Bold">Vertex count</Label>
-					<Label FontWeight="Bold">Index count</Label>
-				</StackPanel>
-				<StackPanel Grid.Column="1">
-					<Label Name="FileName">N/A</Label>
-					<Label Name="FileVertexCount">N/A</Label>
-					<Label Name="FileIndexCount">N/A</Label>
-				</StackPanel>
+				<Grid.RowDefinitions>
+					<RowDefinition Style="{StaticResource PreviewerRow}" />
+					<RowDefinition Style="{StaticResource PreviewerRow}" />
+					<RowDefinition Style="{StaticResource PreviewerRow}" />
+				</Grid.RowDefinitions>
+				<Label FontWeight="Bold">File name</Label>
+				<Label Grid.Row="1" FontWeight="Bold">Vertex count</Label>
+				<Label Grid.Row="2" FontWeight="Bold">Index count</Label>
+				<Label Grid.Column="1" Name="FileName">N/A</Label>
+				<Label Grid.Column="1" Grid.Row="1" Name="FileVertexCount">N/A</Label>
+				<Label Grid.Column="1" Grid.Row="2" Name="FileIndexCount">N/A</Label>
 			</Grid>
 		</StackPanel>
-
 		<StackPanel Grid.Column="2">
 			<Label Style="{StaticResource PreviewTitleLabel}">File preview</Label>
 			<!--OBJ Viewer-->
