--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetRowControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetRowControl.xaml
@@ -21,10 +21,10 @@
 		</Grid.RowDefinitions>
 
 		<TextBlock Grid.RowSpan="2" Style="{StaticResource AssetTextBlock}" Grid.Column="0" Name="TextBlockAssetName" />
-		<Grid Grid.Column="1" Grid.RowSpan="2" MaxWidth="144" HorizontalAlignment="Left">
+		<Grid Grid.Column="1" Grid.RowSpan="2" Name="Tags" HorizontalAlignment="Left">
 			<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockTags" />
 		</Grid>
-		<Grid Grid.Column="2" Grid.RowSpan="2" MaxWidth="240" HorizontalAlignment="Left">
+		<Grid Grid.Column="2" Grid.RowSpan="2" Name="Description" HorizontalAlignment="Left">
 			<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockDescription" />
 		</Grid>
 		<Grid Grid.Column="3">
@@ -33,14 +33,14 @@
 				<ColumnDefinition Width="*" />
 			</Grid.ColumnDefinitions>
 			<TextBox Name="TextBoxLoudness" Visibility="Collapsed" TextChanged="TextBoxLoudness_TextChanged" />
-			<Grid Grid.Column="1" MaxWidth="384" HorizontalAlignment="Left">
+			<Grid Grid.Column="1" Name="Path1" HorizontalAlignment="Left">
 				<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockEditorPath" HorizontalAlignment="Right" />
 			</Grid>
 		</Grid>
 		<Button Grid.Column="4" Click="ButtonRemovePath_Click">Reset</Button>
 		<Button Grid.Column="5" Click="ButtonBrowsePath_Click">Browse</Button>
 
-		<Grid Grid.Column="3" Grid.Row="1" MaxWidth="384" HorizontalAlignment="Left">
+		<Grid Grid.Column="3" Grid.Row="1" Name="Path2" HorizontalAlignment="Left">
 			<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockEditorPathFragmentShader" Visibility="Collapsed" HorizontalAlignment="Right" />
 		</Grid>
 		<Button Grid.Column="4" Grid.Row="1" Click="ButtonRemovePathFragmentShader_Click" Name="RemovePathButtonFragmentShader" Visibility="Collapsed">Reset</Button>
