--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/ImportAssets.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/ImportAssets.xaml
@@ -4,9 +4,9 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		mc:Ignorable="d"
-        Title="Import assets" Height="960" Width="768" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Import assets" Height="768" Width="768" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
 	<StackPanel Name="Main">
-		<StackPanel Style="{StaticResource PaddingStackPanel}" Background="{StaticResource Gray3}">
+		<StackPanel Margin="6" Background="{StaticResource Gray3}">
 			<StackPanel Style="{StaticResource PaddingStackPanel}">
 				<Button Content="Import assets" Click="ImportAssetsButton_Click" Style="{StaticResource OkButtonLarge}" />
 			</StackPanel>
