--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/MakeBinaries.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/MakeBinaries.xaml
@@ -4,11 +4,11 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		mc:Ignorable="d"
-        Title="Make binaries" Height="960" Width="768" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Make binaries" Height="768" Width="768" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
 	<StackPanel Name="Main">
-		<StackPanel Style="{StaticResource PaddingStackPanel}" Background="{StaticResource Gray3}">
+		<StackPanel Margin="6" Background="{StaticResource Gray3}">
 			<StackPanel Style="{StaticResource PaddingStackPanel}">
-				<Button Name="ButtonMakeBinaries" Content="Make binaries" Click="MakeBinaries_Click" Width="128" HorizontalAlignment="Left" />
+				<Button Name="ButtonMakeBinaries" Content="Make binaries" Click="MakeBinaries_Click" Style="{StaticResource OkButtonLarge}" />
 			</StackPanel>
 		</StackPanel>
 	</StackPanel>
