--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/ImportDirectoryControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/ImportDirectoryControl.xaml
@@ -4,7 +4,7 @@
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 mc:Ignorable="d" 
-             d:DesignHeight="128" d:DesignWidth="800">
+             d:DesignHeight="128" d:DesignWidth="768">
 	<Grid Name="Main" Margin="6" Background="{StaticResource Gray3}">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="48" />
@@ -19,11 +19,13 @@
 			<Label Name="Header" />
 			<Grid>
 				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="2*" />
 					<ColumnDefinition />
-					<ColumnDefinition Width="5*"/>
+					<ColumnDefinition Width="6*" />
 				</Grid.ColumnDefinitions>
-				<Button Name="ButtonBrowse" Content="Browse" Click="BrowseButton_Click" HorizontalAlignment="Stretch" />
-				<TextBox Grid.Column="1" Name="TextBox" TextChanged="TextBox_TextChanged" />
+				<CheckBox Name="CheckBoxAllDirectories" IsChecked="True" Content="Include subdirectories" VerticalContentAlignment="Center" />
+				<Button Grid.Column="1" Name="ButtonBrowse" Content="Browse" Click="BrowseButton_Click" HorizontalAlignment="Stretch" />
+				<TextBox Grid.Column="2" Name="TextBox" TextChanged="TextBox_TextChanged" />
 			</Grid>
 		</StackPanel>
 	</Grid>
