--- a/DevilDaggersAssetEditor.Wpf/Gui/Themes/DevilDaggersAssetEditor.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Themes/DevilDaggersAssetEditor.xaml
@@ -38,7 +38,7 @@
 		</Style.Setters>
 	</Style>
 
-	<Style TargetType="Label" x:Key="PreviewTitleLabel">
+	<Style TargetType="Label" x:Key="PreviewerTitleLabel">
 		<Style.Setters>
 			<Setter Property="FontSize" Value="16" />
 			<Setter Property="Padding" Value="0" />
@@ -49,6 +49,14 @@
 	</Style>
 
 	<Style TargetType="TextBlock" x:Key="AssetTextBlock">
+		<Style.Setters>
+			<Setter Property="Margin" Value="2" />
+			<Setter Property="Foreground" Value="{StaticResource Text}" />
+			<Setter Property="VerticalAlignment" Value="Center" />
+		</Style.Setters>
+	</Style>
+
+	<Style TargetType="TextBlock" x:Key="PreviewerTextBlock">
 		<Style.Setters>
 			<Setter Property="Margin" Value="2" />
 			<Setter Property="Foreground" Value="{StaticResource Text}" />
