--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/PreviewerControls/TexturePreviewerControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/PreviewerControls/TexturePreviewerControl.xaml
@@ -12,7 +12,7 @@
 			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
 		<StackPanel>
-			<Label Style="{StaticResource PreviewTitleLabel}">Asset properties</Label>
+			<Label Style="{StaticResource PreviewerTitleLabel}">Asset properties</Label>
 			<Grid>
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition />
@@ -26,13 +26,13 @@
 				<Label FontWeight="Bold">Texture name</Label>
 				<Label Grid.Row="1" FontWeight="Bold">Default dimensions</Label>
 				<Label Grid.Row="2" FontWeight="Bold">Default mipmaps</Label>
-				<Label Grid.Column="1" Name="TextureName">N/A</Label>
+				<TextBlock Grid.Column="1" Name="TextureName" Style="{StaticResource PreviewerTextBlock}">N/A</TextBlock>
 				<Label Grid.Column="1" Grid.Row="1" Name="DefaultDimensions">N/A</Label>
 				<Label Grid.Column="1" Grid.Row="2" Name="DefaultMipmaps">N/A</Label>
 			</Grid>
 		</StackPanel>
 		<StackPanel Grid.Column="1">
-			<Label Style="{StaticResource PreviewTitleLabel}">File properties</Label>
+			<Label Style="{StaticResource PreviewerTitleLabel}">File properties</Label>
 			<Grid>
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition />
@@ -46,13 +46,13 @@
 				<Label FontWeight="Bold">File name</Label>
 				<Label Grid.Row="1" FontWeight="Bold">Dimensions</Label>
 				<Label Grid.Row="2" FontWeight="Bold">Mipmaps</Label>
-				<Label Grid.Column="1" Name="FileName">N/A</Label>
+				<TextBlock Grid.Column="1" Name="FileName" Style="{StaticResource PreviewerTextBlock}">N/A</TextBlock>
 				<Label Grid.Column="1" Grid.Row="1" Name="FileDimensions">N/A</Label>
 				<Label Grid.Column="1" Grid.Row="2" Name="FileMipmaps">N/A</Label>
 			</Grid>
 		</StackPanel>
 		<StackPanel Grid.Column="2">
-			<Label Style="{StaticResource PreviewTitleLabel}">File preview</Label>
+			<Label Style="{StaticResource PreviewerTitleLabel}">File preview</Label>
 			<Image Name="PreviewImage" VerticalAlignment="Top" HorizontalAlignment="Left" MaxWidth="384" MaxHeight="384" RenderOptions.BitmapScalingMode="NearestNeighbor" />
 		</StackPanel>
 	</Grid>
